# eulerian-graph

./: .gitignore  Le_problème.py  README.md  pyproject.toml  requirements.txt  test_page.py
eulerian_graph/: draw.py  edge.py  graph.py  transform.py  walk.py
streamlit_app/: Le_problème.py  test_page.py
streamlit_app/pages/: 2_Algorithme_de_construction.py
tests/: conf_test.py  test_edge.py  test_graph.py  test_transform.py  test_walk.py
tests/graph/: test_edge.py
