[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eulerian-graph"
version = "0.0.1"
authors = [
  { name="Serge MASSON", email="serge.andre.masson@gmail.com" },
]
description = "A explanation of the eulerian graph theorem"
readme = "README.md"
requires-python = ">=3.10"


classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "graph theory",
]

dependencies = []

[project.optional-dependencies]
# development dependency groups
test = ["pytest-watch==4.2.0"]

[tool.setuptools.packages.find]
where = ["src"] 


[project.urls]
"Homepage" = "https://github.com/Serge-Andre-MASSON/eulerian-graph"